--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Giants Construction and Consultancy - Building Excellence in Malawi</title>
+
+    <!-- Title -->
+    <title>Giants Construction and Consultancy – Building Excellence in Malawi</title>
+
+    <!-- SEO -->
     <meta
       name="description"
       content="Professional construction, consultancy, and architectural services in Malawi. Delivering high-quality infrastructure projects since 2017."
     />
     <meta name="author" content="Giants Construction and Consultancy" />
 
+    <!-- Open Graph -->
     <meta
       property="og:title"
-      content="Giants Construction and Consultancy - Building Excellence in Malawi"
+      content="Giants Construction and Consultancy – Building Excellence in Malawi"
     />
     <meta
       property="og:description"
@@ -20,7 +27,11 @@
     />
     <meta property="og:type" content="website" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- REMOVE default Vite favicon -->
+    <link rel="icon" href="data:," />
   </head>
 
   <body>
